test_suite5/ALAN/test_suite/alan-2022-examples/failing/008930_mutation.alan
source f function Z6(boolean iB4 call, boolean Q3K) begin relax end begin relax end
